Archive2/79/58b1825f89cf1e/output
+ clang -x c -std=c89 -O3 -Wall -pedantic-errors main.cpp
main.cpp:6:4: error: arithmetic on a pointer to void is a GNU extension [-Werror,-Wpointer-arith]
ptr++;
~~~^
1 error generated.
